<resources>
    <string name="app_name">CarRenting</string>
    <string name="text_logo">BOOKING CAR</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="create_your_account">Create your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="don_t_have_an_account_yet_sign_up">Don\'t have an account yet? Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account_sign_in">Have an account? Sign In</string>
    <string name="default_web_client_id">364848477571-72a7q178vcsjqjpgebrjd5geu458mv7m.apps.googleusercontent.com</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="viewdetails">ViewDetails</string>
    <string name="rent"><![CDATA[Rents >]]></string>
    <string name="discountprice">DiscountPrice</string>
    <string name="carprice">CarPrice</string>
    <string name="open_drawer" />
    <string name="close_drawer" />
    <string name="price">Price</string>
</resources>